[package]
name = "derivation-path"
version = "0.1.3"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/jpopesculian/derivation-path"
documentation = "https://docs.rs/derivation-path/"
repository = "https://github.com/jpopesculian/derivation-path"
description = "Simple struct for dealing with BIP32/44/49 derivation paths"
keywords = ["derivation", "BIP32", "BIP44", "BIP49", "blockchain"]
categories = ["cryptography", "no-std", "parsing"]

[features]
default = ["std"]
std = []

[dependencies]
failure = { version = "0.1.8", default-features = false, features = ["derive"] }
